k8s/overlays/dev/keycloak/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-public
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: "26.6.1"
    app.kubernetes.io/component: identity-provider
    app.kubernetes.io/part-of: auth-platform
    app.kubernetes.io/managed-by: kustomize
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd # 응답 처리 중간에 적용할 Traefik middleware 목록
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak.dev.example.com
      http:
        paths:
          - path: /realms/
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /resources/
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /.well-known/
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /js/
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
